--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/background-geolocation": "^5.13.0",
     "@ionic-native/core": "^5.1.0",
-    "@ionic-native/geolocation": "^5.0.0-beta.14",
     "@ionic-native/geolocation": "^5.13.0",
+    "@ionic-native/network-interface": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.0.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-networkinterface": "^2.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
@@ -77,7 +79,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      },
+      "cordova-plugin-networkinterface": {}
     },
     "platforms": [
       "android"
