--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/background-geolocation": "^5.13.0",
+    "@ionic-native/calendar": "^5.14.0",
     "@ionic-native/core": "^5.1.0",
     "@ionic-native/geolocation": "^5.13.0",
     "@ionic-native/http": "^5.13.0",
@@ -30,12 +31,12 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-networkinterface": "^2.0.0",
     "core-js": "^2.5.4",
-    "ionic2-calendar": "^0.5.4",
-    "rxjs": "^6.4.0",
     "ionic-angular": "^3.9.8",
+    "ionic2-calendar": "^0.5.4",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
@@ -90,7 +91,8 @@
       },
       "cordova-plugin-networkinterface": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-calendar": {}
     },
     "platforms": [
       "android"
