Perbaikan reports page dan tes slides pada notifications page

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "cordova-android": "8.0.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-networkinterface": "^2.0.0",
+    "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
-    "ionic2-calendar": "^0.5.4",
-    "rxjs": "^6.4.0",
     "ionic-angular": "^3.9.8",
+    "ionic2-calendar": "^0.5.4",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
