--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cordova-android": "8.0.0",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-networkinterface": "^2.0.0",
     "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
