--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-plugin-advanced-http": "^2.2.0",
     "cordova-plugin-calendar": "^5.1.4",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-networkinterface": "^2.0.0",
@@ -93,9 +96,13 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-networkinterface": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      },
       "cordova-plugin-calendar": {},
-      "cordova-plugin-camera": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-file": {}
     },
     "platforms": [
