--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/file": "^5.15.1",
     "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/http": "^5.13.0",
+    "@ionic-native/local-notifications": "^5.17.0",
     "@ionic-native/network-interface": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -34,10 +35,12 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-networkinterface": "^2.0.0",
     "cordova-sqlite-storage": "^3.3.0",
@@ -103,7 +106,8 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
