--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/calendar": "^5.14.0",
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.1.0",
+    "@ionic-native/fcm": "^5.18.0",
     "@ionic-native/file": "^5.15.1",
     "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/http": "^5.13.0",
@@ -38,6 +39,7 @@
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-fcm-with-dependecy-updated": "^4.1.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
@@ -107,7 +109,13 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-file": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {
+        "FCM_CORE_VERSION": "16.0.9",
+        "FCM_VERSION": "18.0.0",
+        "GRADLE_TOOLS_VERSION": "3.5.0",
+        "GOOGLE_SERVICES_VERSION": "4.2.0"
+      }
     },
     "platforms": [
       "android"
