--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/calendar": "^5.14.0",
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.1.0",
+    "@ionic-native/diagnostic": "^5.21.5",
     "@ionic-native/fcm": "^5.18.0",
     "@ionic-native/file": "^5.15.1",
     "@ionic-native/geolocation": "^5.14.0",
@@ -46,6 +47,7 @@
     "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-networkinterface": "^2.0.0",
     "cordova-sqlite-storage": "^3.3.0",
+    "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
     "ionic-angular": "^3.9.8",
     "ionic2-calendar": "^0.5.4",
@@ -115,6 +117,9 @@
         "FCM_VERSION": "18.0.0",
         "GRADLE_TOOLS_VERSION": "3.5.0",
         "GOOGLE_SERVICES_VERSION": "4.2.0"
+      },
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
       }
     },
     "platforms": [
