--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/file": "^5.15.1",
     "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/http": "^5.13.0",
+    "@ionic-native/in-app-browser": "^5.21.6",
     "@ionic-native/local-notifications": "^5.17.0",
     "@ionic-native/network-interface": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -44,6 +45,7 @@
     "cordova-plugin-fcm-with-dependecy-updated": "^4.1.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-networkinterface": "^2.0.0",
@@ -59,7 +61,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.801.3",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "8.1.3",
@@ -124,7 +126,8 @@
       },
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "28.+"
-      }
+      },
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
