--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/background-geolocation": "^5.13.0",
-    "@ionic-native/calendar": "^5.14.0",
-    "@ionic-native/camera": "^5.15.1",
-    "@ionic-native/core": "^5.1.0",
-    "@ionic-native/diagnostic": "^5.21.5",
-    "@ionic-native/fcm": "^5.18.0",
-    "@ionic-native/file": "^5.15.1",
-    "@ionic-native/geolocation": "^5.14.0",
-    "@ionic-native/http": "^5.13.0",
+    "@ionic-native/background-geolocation": "^5.21.6",
+    "@ionic-native/calendar": "^5.21.6",
+    "@ionic-native/camera": "^5.21.6",
+    "@ionic-native/core": "^5.21.6",
+    "@ionic-native/diagnostic": "^5.21.6",
+    "@ionic-native/fcm": "^5.21.6",
+    "@ionic-native/file": "^5.21.6",
+    "@ionic-native/geolocation": "^5.21.6",
+    "@ionic-native/http": "^5.21.6",
     "@ionic-native/in-app-browser": "^5.21.6",
-    "@ionic-native/local-notifications": "^5.17.0",
-    "@ionic-native/network-interface": "^5.13.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.11.7",
+    "@ionic-native/local-notifications": "^5.21.6",
+    "@ionic-native/network-interface": "^5.21.6",
+    "@ionic-native/splash-screen": "^5.21.6",
+    "@ionic-native/status-bar": "^5.21.6",
+    "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
     "cordova-ios": "5.1.1",
-    "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-calendar": "^5.1.4",
+    "cordova-plugin-calendar": "^5.1.5",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-fcm-with-dependecy-updated": "^4.1.1",
     "cordova-plugin-file": "^6.0.2",
@@ -49,14 +49,14 @@
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-networkinterface": "^2.0.0",
-    "cordova-sqlite-storage": "^3.3.0",
+    "cordova-sqlite-storage": "^3.4.1",
     "cordova.plugins.diagnostic": "^5.0.1",
-    "core-js": "^2.5.4",
-    "ionic-angular": "^3.9.8",
-    "ionic2-calendar": "^0.5.4",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
-    "tslib": "^1.9.0",
+    "core-js": "^2.6.11",
+    "ionic-angular": "^3.9.9",
+    "ionic2-calendar": "^0.5.8",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
+    "tslib": "^1.11.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -71,14 +71,14 @@
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/lab": "2.0.10",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "cordova-plugin-device": "^2.0.2",
+    "codelyzer": "^5.2.1",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -86,8 +86,8 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
