--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@ionic-native/in-app-browser": "^5.21.6",
     "@ionic-native/local-notifications": "^5.21.6",
     "@ionic-native/network-interface": "^5.21.6",
+    "@ionic-native/open-native-settings": "^5.21.6",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
     "cordova-ios": "5.1.1",
+    "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.5",
@@ -127,7 +129,8 @@
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "28.+"
       },
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-open-native-settings": {}
     },
     "platforms": [
       "android",
