--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@ionic-native/http": "^5.21.6",
     "@ionic-native/in-app-browser": "^5.21.6",
     "@ionic-native/local-notifications": "^5.21.6",
+    "@ionic-native/native-geocoder": "^5.22.0",
     "@ionic-native/network-interface": "^5.21.6",
     "@ionic-native/open-native-settings": "^5.22.0",
+    "@ionic-native/photo-viewer": "^5.23.0",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
+    "com-sarriaroman-photoviewer": "^1.2.4",
     "cordova-android": "8.0.0",
     "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
@@ -50,6 +53,7 @@
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-mock-location": "0.0.8",
+    "cordova-plugin-nativegeocoder": "^3.2.2",
     "cordova-plugin-networkinterface": "^2.0.0",
     "cordova-sqlite-storage": "^3.4.1",
     "cordova.plugins.diagnostic": "^5.0.1",
@@ -130,7 +134,9 @@
         "ANDROID_SUPPORT_VERSION": "28.+"
       },
       "cordova-plugin-inappbrowser": {},
-      "cordova-open-native-settings": {}
+      "cordova-open-native-settings": {},
+      "cordova-plugin-nativegeocoder": {},
+      "com-sarriaroman-photoviewer": {}
     },
     "platforms": [
       "android",
