--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/app-version": "^5.24.0",
     "@ionic-native/background-geolocation": "^5.21.6",
     "@ionic-native/calendar": "^5.21.6",
     "@ionic-native/camera": "^5.21.6",
@@ -31,6 +32,7 @@
     "@ionic-native/http": "^5.21.6",
     "@ionic-native/in-app-browser": "^5.21.6",
     "@ionic-native/local-notifications": "^5.21.6",
+    "@ionic-native/market": "^5.24.0",
     "@ionic-native/native-geocoder": "^5.22.0",
     "@ionic-native/network-interface": "^5.21.6",
     "@ionic-native/open-native-settings": "^5.22.0",
@@ -44,6 +46,7 @@
     "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^2.4.1",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.5",
     "cordova-plugin-camera": "^4.1.0",
@@ -52,6 +55,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-mock-location": "0.0.8",
     "cordova-plugin-nativegeocoder": "^3.2.2",
     "cordova-plugin-networkinterface": "^2.0.0",
@@ -136,7 +140,9 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-open-native-settings": {},
       "cordova-plugin-nativegeocoder": {},
-      "com-sarriaroman-photoviewer": {}
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-market": {}
     },
     "platforms": [
       "android",
