--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
+    "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
-    "cordova-android": "8.0.0",
+    "cordova-android": "^8.0.0",
+    "cordova-android-play-services-gradle-release": "^4.0.0",
     "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^2.4.1",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.5",
@@ -64,6 +68,7 @@
     "core-js": "^2.6.11",
     "ionic-angular": "^3.9.9",
     "ionic2-calendar": "^0.5.8",
+    "jetifier": "^1.6.6",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.11.0",
@@ -142,11 +147,68 @@
       "cordova-plugin-nativegeocoder": {},
       "com-sarriaroman-photoviewer": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-market": {}
+      "cordova-plugin-market": {},
+      "cordova-plugin-background-geolocation": {},
+      "cordova-android-play-services-gradle-release": {
+        "PLAY-SERVICES-ADS": "18.0.0",
+        "PLAY-SERVICES-ADS-IDENTIFIER": "17.0.0",
+        "PLAY-SERVICES-ADS-LITE": "18.0.0",
+        "PLAY-SERVICES-AFS-NATIVE": "17.0.0",
+        "PLAY-SERVICES-ANALYTICS": "17.0.0",
+        "PLAY-SERVICES-ANALYTICS-IMPL": "17.0.0",
+        "PLAY-SERVICES-APPINVITE": "18.0.0",
+        "PLAY-SERVICES-AUDIENCE": "17.0.0",
+        "PLAY-SERVICES-AUTH": "17.0.0",
+        "PLAY-SERVICES-AUTH-API-PHONE": "17.0.0",
+        "PLAY-SERVICES-AWARENESS": "17.0.0",
+        "PLAY-SERVICES-BASE": "17.0.0",
+        "PLAY-SERVICES-BASEMENT": "17.0.0",
+        "PLAY-SERVICES-CAST": "17.0.0",
+        "PLAY-SERVICES-CAST-FRAMEWORK": "17.0.0",
+        "PLAY-SERVICES-CLEARCUT": "17.0.0",
+        "PLAY-SERVICES-CRONET": "17.0.0",
+        "PLAY-SERVICES-DRIVE": "17.0.0",
+        "PLAY-SERVICES-FIDO": "18.0.0",
+        "PLAY-SERVICES-FITNESS": "17.0.0",
+        "PLAY-SERVICES-FLAGS": "17.0.0",
+        "PLAY-SERVICES-GAMES": "18.0.0",
+        "PLAY-SERVICES-GASS": "18.0.0",
+        "PLAY-SERVICES-GCM": "17.0.0",
+        "PLAY-SERVICES-IDENTITY": "17.0.0",
+        "PLAY-SERVICES-IID": "17.0.0",
+        "PLAY-SERVICES-INSTANTAPPS": "17.0.0",
+        "PLAY-SERVICES-LOCATION": "17.0.0",
+        "PLAY-SERVICES-MAPS": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-API": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-IMPL": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-SDK": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-SDK-API": "17.0.0",
+        "PLAY-SERVICES-NEARBY": "17.0.0",
+        "PLAY-SERVICES-OSS-LICENSES": "17.0.0",
+        "PLAY-SERVICES-PANORAMA": "17.0.0",
+        "PLAY-SERVICES-PHENOTYPE": "17.0.0",
+        "PLAY-SERVICES-PLACES": "17.0.0",
+        "PLAY-SERVICES-PLACES-PLACEREPORT": "17.0.0",
+        "PLAY-SERVICES-PLUS": "17.0.0",
+        "PLAY-SERVICES-SAFETYNET": "17.0.0",
+        "PLAY-SERVICES-STATS": "17.0.0",
+        "PLAY-SERVICES-TAGMANAGER": "17.0.0",
+        "PLAY-SERVICES-TAGMANAGER-API": "17.0.0",
+        "PLAY-SERVICES-TAGMANAGER-V4-IMPL": "17.0.0",
+        "PLAY-SERVICES-TASKS": "17.0.0",
+        "PLAY-SERVICES-VISION": "18.0.0",
+        "PLAY-SERVICES-VISION-COMMON": "18.0.0",
+        "PLAY-SERVICES-VISION-IMAGE-LABEL": "18.0.0",
+        "PLAY-SERVICES-WALLET": "17.0.0",
+        "PLAY-SERVICES-WEARABLE": "17.0.0"
+      },
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
