--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/app-minimize": "^5.29.0",
     "@ionic-native/app-version": "^5.24.0",
-    "@ionic-native/background-geolocation": "^5.21.6",
+    "@ionic-native/background-geolocation": "^5.28.0",
+    "@ionic-native/background-mode": "^5.28.0",
     "@ionic-native/calendar": "^5.21.6",
     "@ionic-native/camera": "^5.21.6",
     "@ionic-native/core": "^5.21.6",
@@ -43,7 +45,7 @@
     "@ionic/storage": "^2.2.0",
     "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
-    "cordova-android": "^8.0.0",
+    "cordova-android": "8.1.0",
     "cordova-android-play-services-gradle-release": "^4.0.0",
     "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
@@ -89,6 +91,8 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.1",
+    "cordova-plugin-appminimize": "^1.0.1",
+    "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -148,7 +152,16 @@
       "com-sarriaroman-photoviewer": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-market": {},
-      "cordova-plugin-background-geolocation": {},
+      "cordova-plugin-background-geolocation": {
+        "GOOGLE_PLAY_SERVICES_VERSION": "11+",
+        "ANDROID_SUPPORT_LIBRARY_VERSION": "26+",
+        "ICON": "@mipmap/ic_launcher",
+        "SMALL_ICON": "@mipmap/ic_launcher",
+        "ACCOUNT_NAME": "@string/app_name",
+        "ACCOUNT_LABEL": "@string/app_name",
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      },
       "cordova-android-play-services-gradle-release": {
         "PLAY-SERVICES-ADS": "18.0.0",
         "PLAY-SERVICES-ADS-IDENTIFIER": "17.0.0",
@@ -204,7 +217,9 @@
         "PLAY-SERVICES-WEARABLE": "17.0.0"
       },
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-appminimize": {}
     },
     "platforms": [
       "ios",
