--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^4.11.10",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage": "^2.2.0",
     "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
