- Install capacitor (Add capacitor.config.json) - Add photo.service.ts - Trying to integrate capacitor (not done yet) - Remove TakePhotos (Disabled wajib isi foto) - Fixing Team Activity

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@capacitor/core": "2.4.6",
     "@ionic-native/app-minimize": "^5.29.0",
     "@ionic-native/app-version": "^5.24.0",
     "@ionic-native/background-geolocation": "^5.28.0",
@@ -86,6 +87,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "2.4.6",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/lab": "2.0.10",
     "@types/jasmine": "~3.3.8",
