--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cordova-android-play-services-gradle-release": "^4.0.0",
     "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.1",
@@ -109,7 +110,8 @@
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "cordova-plugin-background-geolocation": "@mauron85/cordova-plugin-background-geolocation@^3.1.0"
   },
   "description": "An Ionic project",
   "cordova": {
