--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@ionic-native/photo-viewer": "^5.23.0",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
-    "@ionic/angular": "^4.11.10",
+    "@ionic/angular": "^6.5.5",
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage": "^2.2.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
@@ -87,7 +87,7 @@
     "@angular/compiler-cli": "~12.2.17",
     "@angular/language-service": "~12.2.17",
     "@capacitor/cli": "2.4.6",
-    "@ionic/angular-toolkit": "~2.0.0",
+    "@ionic/angular-toolkit": "^8.0.0",
     "@ionic/lab": "2.0.10",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
