--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^6.5.5",
+    "@ionic/cordova-builders": "^8.0.0",
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage": "^2.2.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
