- change defaultCollection to schematicCollections on cli angular.json - ionic generate component components/maintenance

--- a/angular.json
+++ b/angular.json
@@ -162,7 +162,7 @@
   },
   "cli": {
     "analytics": false,
-    "defaultCollection": "@ionic/angular-toolkit"
+    "schematicCollections": "@ionic/angular-toolkit"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
